// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typeahead should render 1`] = `
<Downshift
  defaultHighlightedIndex={null}
  defaultIsOpen={false}
  environment={Object {}}
  getA11yStatusMessage={[Function]}
  id="keyList"
  itemToString={[Function]}
  onChange={[MockFunction]}
  onInputValueChange={[Function]}
  onOuterClick={[Function]}
  onSelect={[Function]}
  onStateChange={[Function]}
  onUserAction={[Function]}
  scrollIntoView={[Function]}
  selectedItemChanged={[Function]}
  stateReducer={[Function]}
  suppressRefError={false}
/>
`;

exports[`TypeaheadMenu should handle the currently highlighted item 1`] = `
<TypeaheadMenu__Menu>
  <TypeaheadMenu__MenuList>
    <TypeaheadMenu__MenuItem
      key="apple"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={true}
        isSelected={false}
      >
        apple
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="orange"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        orange
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="pear"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        pear
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="strawberry"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        strawberry
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="raspberry"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        raspberry
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
  </TypeaheadMenu__MenuList>
</TypeaheadMenu__Menu>
`;

exports[`TypeaheadMenu should handle the currently selected item 1`] = `
<TypeaheadMenu__Menu>
  <TypeaheadMenu__MenuList>
    <TypeaheadMenu__MenuItem
      key="apple"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={true}
        isSelected={false}
      >
        apple
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="orange"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        orange
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="pear"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={true}
      >
        pear
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="strawberry"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        strawberry
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="raspberry"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        raspberry
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
  </TypeaheadMenu__MenuList>
</TypeaheadMenu__Menu>
`;

exports[`TypeaheadMenu should handle the menu being open 1`] = `
<TypeaheadMenu__Menu
  openMenu={true}
>
  <TypeaheadMenu__MenuList>
    <TypeaheadMenu__MenuItem
      key="apple"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        apple
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="orange"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        orange
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="pear"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        pear
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="strawberry"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        strawberry
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="raspberry"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        raspberry
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
  </TypeaheadMenu__MenuList>
</TypeaheadMenu__Menu>
`;

exports[`TypeaheadMenu should render 1`] = `
<TypeaheadMenu__Menu>
  <TypeaheadMenu__MenuList>
    <TypeaheadMenu__MenuItem
      key="apple"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        apple
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="orange"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        orange
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="pear"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        pear
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="strawberry"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        strawberry
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
    <TypeaheadMenu__MenuItem
      key="raspberry"
      onMouseMove={[Function]}
    >
      <TypeaheadMenu__MenuItemText
        isActive={false}
        isSelected={false}
      >
        raspberry
      </TypeaheadMenu__MenuItemText>
    </TypeaheadMenu__MenuItem>
  </TypeaheadMenu__MenuList>
</TypeaheadMenu__Menu>
`;
